// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaletteSpinner props.display should display a black spinner when set to inline 1`] = `
<PaletteSpinner
  display="inline"
>
  <DefaultSpinnerComponent
    display="inline"
  >
    <div
      className="default-spinner inline"
      role="status"
    >
      <span
        className="sr-only"
      >
        Loading...
      </span>
    </div>
  </DefaultSpinnerComponent>
</PaletteSpinner>
`;

exports[`PaletteSpinner props.display should display a white spinner when set to modal 1`] = `
<PaletteSpinner
  display="modal"
>
  <DefaultSpinnerComponent
    display="modal"
  >
    <div
      className="default-spinner modal"
      role="status"
    >
      <span
        className="sr-only"
      >
        Loading...
      </span>
    </div>
  </DefaultSpinnerComponent>
</PaletteSpinner>
`;

exports[`PaletteSpinner props.spinner should display a custom string when props.spinner is set 1`] = `
<PaletteSpinner
  spinner="Waiting"
>
  <CustomSpinnerComponent
    spinner="Waiting"
  >
    <div
      className="spinner modal"
      role="status"
    >
      Waiting
    </div>
  </CustomSpinnerComponent>
</PaletteSpinner>
`;

exports[`PaletteSpinner props.spinner should display an "inline" custom string when props.spinner is set 1`] = `
<PaletteSpinner
  display="inline"
  spinner="Waiting"
>
  <CustomSpinnerComponent
    display="inline"
    spinner="Waiting"
  >
    <div
      className="spinner inline"
      role="status"
    >
      Waiting
    </div>
  </CustomSpinnerComponent>
</PaletteSpinner>
`;

exports[`PaletteSpinner props.spinner should render the DefaultSpinnerComponent by default 1`] = `
<PaletteSpinner>
  <DefaultSpinnerComponent>
    <div
      className="default-spinner modal"
      role="status"
    >
      <span
        className="sr-only"
      >
        Loading...
      </span>
    </div>
  </DefaultSpinnerComponent>
</PaletteSpinner>
`;
